<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicialActivity"
    android:background="#c6d8e2">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:gravity="center"
      android:layout_marginStart="50dp"
      android:layout_marginEnd="50dp">

      <EditText
          android:id="@+id/email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/e_mail"
          android:textAlignment="center" />

      <EditText
          android:id="@+id/senha"
          android:layout_marginTop="30dp"

          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/senha"
          android:textAlignment="center"
          android:inputType="numberPassword"/>

      <Button
          android:id="@+id/entrar"
          android:layout_marginTop="50dp"
          android:layout_width="150dp"
          android:layout_height="wrap_content"
          android:text="@string/entrar"/>

      <android.support.v7.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="ou"/>

      <Button
          android:id="@+id/criar_conta"
          android:layout_width="150dp"
          android:layout_height="wrap_content"
          android:text="@string/criar_conta"/>



  </LinearLayout>
</android.support.constraint.ConstraintLayout>